--- a/package.json
+++ b/package.json
@@ -15,9 +15,14 @@
   "author": "LatidudeMaps",
   "license": "MIT",
   "dependencies": {
+    "@mapbox/togeojson": "^0.16.2",
+    "@turf/turf": "^6.5.0",
     "@watergis/maplibre-gl-export": "^4.0.0",
     "maplibre-gl": "^5.2.0",
-    "maplibre-theme": "^0.2.1"
+    "maplibre-theme": "^0.2.1",
+    "papaparse": "^5.4.1",
+    "shapefile": "^0.6.6",
+    "shpjs": "^4.0.4"
   },
   "devDependencies": {
     "css-loader": "^6.7.3",
