--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
   "dependencies": {
     "@mapbox/togeojson": "^0.16.2",
     "@turf/turf": "^6.5.0",
-    "@watergis/maplibre-gl-export": "^4.0.0",
     "buffer": "^6.0.3",
+    "file-saver": "^2.0.5",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.0",
     "jszip": "^3.10.1",
     "maplibre-gl": "^5.2.0",
     "maplibre-theme": "^0.2.1",
